--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "~1.4.8",
     "angular-animate": "~1.4.8",
     "angular-aria": "~1.4.8",
-    "angular-material": "~1.0.2"
+    "angular-material": "~1.0.2",
+    "angular-ui-router": "~0.2.15"
   }
 }
