--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "browserify": "^13.0.0",
+    "colors": "^1.1.2",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-inject": "^3.0.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
