--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-animate": "~1.4.8",
     "angular-aria": "~1.4.8",
     "angular-material": "~1.0.2",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "Ionicons": "ionicons#~2.0.1"
   }
 }
