--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-aria": "~1.4.8",
     "angular-material": "~1.0.2",
     "angular-ui-router": "~0.2.15",
-    "Ionicons": "ionicons#~2.0.1"
+    "Ionicons": "ionicons#~2.0.1",
+    "Materialize": "materialize#~0.97.5"
   }
 }
